testsuite/tests/properties/invalid_node_builder/bad_generic_type/test.lkt
from common import BaseExample

class Example: BaseExample {
    fun f(): NodeBuilder[Int] = 0
}
